Package creation and builder package consumption changed with pack 0.9.0
Signed-off-by: Simon Jones <simonjones@vmware.com>

--- a/builders/alpine/builder.toml
+++ b/builders/alpine/builder.toml
@@ -9,7 +9,7 @@ id = "io.buildpacks.samples.kotlin-gradle"
 version = "0.0.1"
 uri = "../../buildpacks/kotlin-gradle"
 
-[[packages]]
+[[buildpacks]]
 image = "cnbs/sample-package:hello-universe"
 
 # Order used for detection
