--- a/buildpacks/java-maven/buildpack.toml
+++ b/buildpacks/java-maven/buildpack.toml
@@ -6,6 +6,8 @@ api = "0.2"
 id = "io.buildpacks.samples.java-maven"
 version = "0.0.1"
 name = "Sample Java Maven Buildpack"
+homepage = "https://github.com/buildpacks/samples/tree/master/buildpacks/java-maven"
+
 
 # Stacks that the buildpack will work with
 [[stacks]]
