--- a/buildpacks/hello-world/buildpack.toml
+++ b/buildpacks/hello-world/buildpack.toml
@@ -3,7 +3,7 @@ api = "0.2"
 
 # Buildpack ID and metadata
 [buildpack]
-id = "buildpacks-io-samples/hello-world"
+id = "samples/hello-world"
 version = "0.0.1"
 name = "Hello World Buildpack"
 homepage = "https://github.com/buildpacks/samples/tree/master/buildpacks/hello-world"
