Add Windows nanoserver builder
Signed-off-by: Javier Romero <root@jromero.codes>

--- a/stacks/nanoserver-1809/base/Dockerfile
+++ b/stacks/nanoserver-1809/base/Dockerfile
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/windows/nanoserver:1809-KB4534273
-ARG cnb_uid=S-1-1-0
-ARG cnb_gid=S-1-1-0
+ARG cnb_uid=0
+ARG cnb_gid=0
 
 USER ContainerAdministrator
 
@@ -9,4 +9,4 @@ RUN net users /ADD cnb /passwordreq:no /expires:never
 ENV CNB_USER_ID=${cnb_uid}
 ENV CNB_GROUP_ID=${cnb_gid}
 
-USER cnb
+USER ${cnb_uid}:${cnb_gid}
