--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -3,10 +3,10 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build-linux:
@@ -39,7 +39,7 @@ jobs:
       - name: Build
         run: PACK_CMD=./pack make build-linux
       - name: Deploy
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: make deploy-linux
       - name: Clean up
         run: make clean-linux
@@ -54,7 +54,7 @@ jobs:
       - name: Build
         run: make build-windows
       - name: Deploy
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: make deploy-windows
       - name: Clean up
         run: make clean-windows
