Create and release sample builder upon pack release
* Resolves #75
* Relates to buildpacks/pack#732

Signed-off-by: David Freilich <dfreilich@vmware.com>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
       - master
+  repository_dispatch:
+    types:
+      - pack-release
 
 jobs:
   build-linux:
@@ -58,4 +61,3 @@ jobs:
         run: make deploy-windows
       - name: Clean up
         run: make clean-windows
-
