Add Windows builder and buildpacks
- Add Makefile targets for Windows
- Fix ASCII art bin bash-app
- Change stack to use ContainerUser (avoid permissions issues on k8s and docker)

Signed-off-by: Micah Young <ymicah@vmware.com>

--- a/buildpacks/hello-world/bin/build
+++ b/buildpacks/hello-world/bin/build
@@ -7,10 +7,12 @@ echo "---> Hello World buildpack"
 env_dir=$2/env
 layers_dir=$1
 plan_path=$3
+echo ALL ARGS $*
 
 # ENV VARS
 echo "     env_dir: ${env_dir}"
 echo "     env vars:"
+
 if compgen -G "${env_dir}/*" > /dev/null; then
   for var in ${env_dir}/*; do
     declare "$(basename ${var})=$(<${var})"
