Update hello-universe to use a public image
* This demonstrates that packages can also consume images

Signed-off-by: David Freilich <dfreilich@vmware.com>

--- a/packages/hello-universe/package.toml
+++ b/packages/hello-universe/package.toml
@@ -5,4 +5,4 @@ uri = "../../buildpacks/hello-universe/"
 uri = "../../buildpacks/hello-moon"
 
 [[dependencies]]
-uri = "../../buildpacks/hello-world"
+image = "cnbs/sample-package:hello-world"
