Comment out image and add note clarifying usage
Signed-off-by: David Freilich <dfreilich@vmware.com>

--- a/packages/hello-universe/package.toml
+++ b/packages/hello-universe/package.toml
@@ -5,4 +5,6 @@ uri = "../../buildpacks/hello-universe/"
 uri = "../../buildpacks/hello-moon"
 
 [[dependencies]]
-image = "cnbs/sample-package:hello-world"
+uri = "../../buildpacks/hello-world"
+# Alternatively, to use an image while packaging, you can use:
+# image = "cnbs/sample-package:hello-world"
