Workaround for pack/issues/800
- Add missing PATH env var to run image so that it gets properly set in app images
- Can be removed once https://github.com/buildpacks/pack/issues/800 is resolved

Signed-off-by: Micah Young <ymicah@vmware.com>

--- a/stacks/nanoserver-1809/base/Dockerfile
+++ b/stacks/nanoserver-1809/base/Dockerfile
@@ -7,4 +7,7 @@ ARG cnb_gid=1
 ENV CNB_USER_ID=${cnb_uid}
 ENV CNB_GROUP_ID=${cnb_gid}
 
+# launcher requires a non-empty PATH to workaround https://github.com/buildpacks/pack/issues/800
+ENV PATH c:\\Windows\\system32;C:\\Windows
+
 USER ContainerUser
