GHA: Add pack experimental flag for Windows
Signed-off-by: Micah Young <ymicah@vmware.com>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -70,6 +70,8 @@ jobs:
         run: |
           curl -s -L -o pack.zip ${{ steps.pack-download-url.outputs.result }}
           tar -xvf pack.zip
+          mkdir ~\.pack
+          echo "experimental = true" | Out-File -Encoding ASCII ~\.pack\config.toml
       - name: Build
         run: make build-windows
       - uses: azure/docker-login@v1
