Update ruby buildpack to be aligned with the docs tutorial
See: https://github.com/buildpacks/docs/pull/188

Signed-off-by: Natalie Arellano <narellano@vmware.com>

--- a/buildpacks/ruby-bundler/bin/build
+++ b/buildpacks/ruby-bundler/bin/build
@@ -61,4 +61,7 @@ cat >> "${layers_dir}/launch.toml" <<EOL
 [[processes]]
 type = "web"
 command = "bundle exec ruby app.rb"
+[[processes]]
+type = "worker"
+command = "bundle exec ruby worker.rb"
 EOL
