add volume examples, these are going to be referenced in the volume documentation
Signed-off-by: dwillist <dthornton@vmware.com>

--- a/buildpacks/hello-world/bin/build
+++ b/buildpacks/hello-world/bin/build
@@ -18,6 +18,15 @@ if compgen -G "${env_dir}/*" > /dev/null; then
 fi
 export | sed 's/^/       /'
 
+# VOLUMES
+VOLUME_FILE=/platform/volume/volume_contents.txt
+if [[ -f "$VOLUME_FILE" ]]; then
+  echo "     reading volume contents:"
+  echo "         $(cat /platform/volume/volume_contents.txt)"
+else
+  echo "     no volumes found under /platform/volume"
+fi
+
 # LAYERS
 echo "     layers_dir: ${layers_dir}"
 
