Update package.toml to use explicit windows os
- Fix image syntax

Signed-off-by: Micah Young <ymicah@vmware.com>

--- a/builders/nanoserver-1809/builder.toml
+++ b/builders/nanoserver-1809/builder.toml
@@ -1,6 +1,6 @@
 # Buildpacks to include in builder
 [[buildpacks]]
-image = "cnbs/sample-package:hello-universe-windows"
+uri = "docker://cnbs/sample-package:hello-universe-windows"
 
 # Order used for detection
 [[order]]
