Change builder and package usages of image to docker uris
-Fixes samples with pack 0.5.0

Signed-off-by: Micah Young <ymicah@vmware.com>

--- a/builders/alpine/builder.toml
+++ b/builders/alpine/builder.toml
@@ -10,7 +10,7 @@ version = "0.0.1"
 uri = "../../buildpacks/kotlin-gradle"
 
 [[buildpacks]]
-image = "cnbs/sample-package:hello-universe"
+uri = "docker://cnbs/sample-package:hello-universe"
 
 # Order used for detection
 [[order]]
