--- a/builders/bionic/builder.toml
+++ b/builders/bionic/builder.toml
@@ -15,7 +15,7 @@ version = "0.0.1"
 uri = "../../buildpacks/ruby-bundler"
 
 [[buildpacks]]
-image = "cnbs/sample-package:hello-universe"
+uri = "docker://cnbs/sample-package:hello-universe"
 
 # Order used for detection
 [[order]]
