--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ workflows:
       - pack/build:
           working-directory: apps/java-maven
           image-name: cnbs/circleci-sample
-          builder: 'paketobuildpacks/builder:base'
+          builder: 'cnbs/sample-builder:bionic'
           requires:
             - request-testing
       - test-and-publish:
