Update commands to match pack 0.16.0
Pack v0.16.0 deprecated a number of commands, including `create-builder`
and `package-buildpack`. This change replaces references to the
deprecated commands with their new equivalent, using the resource based
subcommand model.

Additionally, this change utilizes the new pack config experimental
command to set experimental, rather than echoing it into the file.

Signed-off-by: David Freilich <dfreilich@vmware.com>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -71,7 +71,7 @@ jobs:
           curl -s -L -o pack.zip ${{ steps.pack-download-url.outputs.result }}
           tar -xvf pack.zip
           mkdir ~\.pack
-          echo "experimental = true" | Out-File -Encoding ASCII ~\.pack\config.toml
+          pack.exe config experimental true
       - name: Build
         run: make build-windows
       - uses: azure/docker-login@v1
