--- a/apps/batch-script/batch-script-buildpack/buildpack.toml
+++ b/apps/batch-script/batch-script-buildpack/buildpack.toml
@@ -10,3 +10,7 @@ name = "Batch Script Buildpack"
 # Stacks that the buildpack will work with
 [[stacks]]
 id = "io.buildpacks.samples.stacks.nanoserver-1809"
+[[stacks]]
+id = "io.buildpacks.samples.stacks.wine"
+[[stacks]]
+id = "io.buildpacks.stacks.windows.servercore"
