--- a/buildpacks/hello-moon-windows/buildpack.toml
+++ b/buildpacks/hello-moon-windows/buildpack.toml
@@ -14,3 +14,6 @@ id = "io.buildpacks.samples.stacks.nanoserver-1809"
 
 [[stacks]]
 id = "io.buildpacks.samples.stacks.dotnet-framework-1809"
+
+[[stacks]]
+id = "io.buildpacks.samples.stacks.wine"
