--- a/buildpacks/hello-world-windows/buildpack.toml
+++ b/buildpacks/hello-world-windows/buildpack.toml
@@ -10,3 +10,6 @@ homepage = "https://github.com/buildpacks/samples/tree/main/buildpacks/hello-wor
 
 [[stacks]]
 id = "io.buildpacks.samples.stacks.nanoserver-1809"
+
+[[stacks]]
+id = "io.buildpacks.samples.stacks.wine"
