Initial skeleton of files
Signed-off-by: Natalie Arellano <narellano@vmware.com>

--- a/stacks/bionic/run/Dockerfile
+++ b/stacks/bionic/run/Dockerfile
@@ -7,3 +7,6 @@ LABEL io.buildpacks.stack.id="${stack_id}"
 
 # Set user and group (as declared in base image)
 USER ${CNB_USER_ID}:${CNB_GROUP_ID}
+
+# TODO: add genpkgs
+COPY genpkgs /cnb/image/genpkgs
