Changes to test sbom warning
Signed-off-by: Natalie Arellano <narellano@vmware.com>

--- a/buildpacks/hello-world/buildpack.toml
+++ b/buildpacks/hello-world/buildpack.toml
@@ -1,5 +1,5 @@
 # Buildpack API version
-api = "0.2"
+api = "0.7"
 
 # Buildpack ID and metadata
 [buildpack]
@@ -7,6 +7,7 @@ id = "samples/hello-world"
 version = "0.0.1"
 name = "Hello World Buildpack"
 homepage = "https://github.com/buildpacks/samples/tree/main/buildpacks/hello-world"
+sbom-formats = ["application/vnd.cyclonedx+json"]
 
 # Stacks that the buildpack will work with
 [[stacks]]
