--- a/buildpacks/hello-world/bin/build
+++ b/buildpacks/hello-world/bin/build
@@ -9,27 +9,14 @@ env_dir=${platform_dir}/env
 layers_dir=$1
 plan_path=$3
 
-# PLATFORM DIR
-echo "     platform_dir files:"
-ls -alR "${platform_dir}" | sed 's/^/       /'
+cat << EOF > $1/launch.sbom.cdx.json
+{}
+EOF
 
-# ENV VARS
-echo "     env_dir: ${env_dir}"
-echo "     env vars:"
-if compgen -G "${env_dir}/*" > /dev/null; then
-  for var in ${env_dir}/*; do
-    declare "$(basename ${var})=$(<${var})"
-  done
-fi
-export | sed 's/^/       /'
+cat << EOF > $1/launch.toml
+[[bom]]
+name = "some-dep"
 
-# LAYERS
-echo "     layers_dir: ${layers_dir}"
-
-# PLAN
-echo "     plan_path: ${plan_path}"
-echo "     plan contents:"
-cat ${plan_path} | sed 's/^/       /'
-echo
+EOF
 
 echo "---> Done"
