--- a/buildpacks/hello-world-windows/buildpack.toml
+++ b/buildpacks/hello-world-windows/buildpack.toml
@@ -12,4 +12,7 @@ homepage = "https://github.com/buildpacks/samples/tree/main/buildpacks/hello-wor
 id = "io.buildpacks.samples.stacks.nanoserver-1809"
 
 [[stacks]]
+  id = "io.buildpacks.samples.stacks.dotnet-framework-2004"
+
+[[stacks]]
 id = "io.buildpacks.samples.stacks.wine"
