--- a/buildpacks/dotnet-framework/buildpack.toml
+++ b/buildpacks/dotnet-framework/buildpack.toml
@@ -7,3 +7,6 @@ api = "0.2"
 
 [[stacks]]
   id = "io.buildpacks.samples.stacks.dotnet-framework-1809"
+
+[[stacks]]
+  id = "io.buildpacks.samples.stacks.dotnet-framework-2004"
