--- a/buildpacks/hello-moon-windows/buildpack.toml
+++ b/buildpacks/hello-moon-windows/buildpack.toml
@@ -16,4 +16,7 @@ id = "io.buildpacks.samples.stacks.nanoserver-1809"
 id = "io.buildpacks.samples.stacks.dotnet-framework-1809"
 
 [[stacks]]
+  id = "io.buildpacks.samples.stacks.dotnet-framework-2004"
+
+[[stacks]]
 id = "io.buildpacks.samples.stacks.wine"
