GHA: pin windows build to Windows 2019
Our main samples are built for 1809 which target Windows 2019.

Signed-off-by: Javier Romero <rjavier@vmware.com>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Clean up
         run: make clean-linux clean-wine
   build-windows:
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
       - name: Determine download URL for latest pack
