Add Windows 2022 builder
Signed-off-by: Javier Romero <rjavier@vmware.com>

--- a/buildpacks/dotnet-framework/buildpack.toml
+++ b/buildpacks/dotnet-framework/buildpack.toml
@@ -10,3 +10,6 @@ api = "0.2"
 
 [[stacks]]
   id = "io.buildpacks.samples.stacks.dotnet-framework-2004"
+
+[[stacks]]
+  id = "io.buildpacks.samples.stacks.dotnet-framework-2022"
