--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -48,7 +48,14 @@ jobs:
       - name: Clean up
         run: make clean-linux clean-wine
   build-windows:
-    runs-on: windows-2019
+    strategy:
+      matrix:
+        include:
+          - os: windows-2019
+            version: 1809
+          - os: windows-2022
+            version: 2022
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - name: Determine download URL for latest pack
@@ -74,7 +81,7 @@ jobs:
       - name: Set Experimental
         run: make set-experimental
       - name: Build
-        run: make build-windows-1809
+        run: make build-windows-${{ matrix.version }}
       - uses: azure/docker-login@v1
         if: (github.event_name == 'repository_dispatch') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         with:
@@ -82,6 +89,6 @@ jobs:
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - name: Deploy
         if: (github.event_name == 'repository_dispatch') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
-        run: make deploy-windows-1809
+        run: make deploy-windows-${{ matrix.version }}
       - name: Clean up
         run: make clean-windows
