--- a/buildpacks/hello-moon-windows/buildpack.toml
+++ b/buildpacks/hello-moon-windows/buildpack.toml
@@ -19,4 +19,7 @@ id = "io.buildpacks.samples.stacks.dotnet-framework-1809"
   id = "io.buildpacks.samples.stacks.dotnet-framework-2004"
 
 [[stacks]]
+  id = "io.buildpacks.samples.stacks.dotnet-framework-2022"
+
+[[stacks]]
 id = "io.buildpacks.samples.stacks.wine"
