--- a/buildpacks/hello-world-windows/buildpack.toml
+++ b/buildpacks/hello-world-windows/buildpack.toml
@@ -15,4 +15,7 @@ id = "io.buildpacks.samples.stacks.nanoserver-1809"
   id = "io.buildpacks.samples.stacks.dotnet-framework-2004"
 
 [[stacks]]
+  id = "io.buildpacks.samples.stacks.dotnet-framework-2022"
+
+[[stacks]]
 id = "io.buildpacks.samples.stacks.wine"
