Fix: CI: Wrong pack binary selected
Now that pack produces linux-arm64, the CI pipeline is picking up the wrong variant. This
fix adds additional string matching to select the proper variant.

Signed-off-by: Javier Romero <rjavier@vmware.com>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,7 +28,7 @@ jobs:
                 repo: "pack"
             }).then(result => {
                 return result.data.assets
-                  .filter(a => a.name.includes("linux"))
+                  .filter(a => a.name.includes("-linux.tgz"))
                   .map(a => a.browser_download_url)[0];
             })
       - name: Install pack
