--- a/buildpacks/hello-processes/bin/build
+++ b/buildpacks/hello-processes/bin/build
@@ -8,29 +8,18 @@ env_dir=$2/env
 layers_dir=$1
 plan_path=$3
 
-# ADD SYS-INFO PROCESS
-echo "---> Adding sys-info process"
-sysinfo_layer_dir="${layers_dir}/sys-info"
-mkdir -p ${sysinfo_layer_dir}
-
-cat > "${sysinfo_layer_dir}.toml" << EOF
-launch = true
-EOF
-
-sysinfo_script="${sysinfo_layer_dir}/sys-info.sh"
-cat > ${sysinfo_script} <<EOL
-#!/usr/bin/env bash
-
-echo "     env vars:"
-export | sed 's/^/       /'
-EOL
-
-chmod +x ${sysinfo_script}
-
 cat >> "${layers_dir}/launch.toml" <<EOL
 [[processes]]
-type = "sys-info"
-command = "${sysinfo_script}"
+type = "always-args"
+command = ["echo", "always"]
+[[processes]]
+type = "overridable-args"
+command = ["echo"]
+args = ["overridable"]
+[[processes]]
+type = "both-args"
+command = ["echo", "always"]
+args = ["overridable"]
 EOL
 
 echo "---> Done"
