Builders and buildpacks for host platform arch
When running on amd64 build builders and buildpacks for that
architecture.  Similarly, support arm64 on arm64.

Signed-off-by: Aidan Delaney <adelaney21@bloomberg.net>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -51,6 +51,45 @@ jobs:
         run: make deploy-linux deploy-wine
       - name: Clean up
         run: make clean-linux clean-wine
+  build-deploy-linux-arm64:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Determine download URL for latest pack
+        id: pack-download-url
+        uses: actions/github-script@0.4.0
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          result-encoding: string
+          script: |
+            return github.repos.getLatestRelease({
+                owner: "buildpacks",
+                repo: "pack"
+            }).then(result => {
+                return result.data.assets
+                  .filter(a => a.name.includes("-linux-arm64.tgz"))
+                  .map(a => a.browser_download_url)[0];
+            })
+      - name: Install pack
+        run: |
+          curl -s -L -o pack.tgz ${{ steps.pack-download-url.outputs.result }}
+          tar -xvf pack.tgz
+      - name: Set config needed for image extensions
+        run: |
+          ./pack config experimental true
+          ./pack config pull-policy always
+      - name: Build
+        run: PACK_CMD=./pack make build-linux-stacks
+      - uses: azure/docker-login@v1
+        if: (github.event_name == 'repository_dispatch') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+        with:
+          username: cnbs
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Deploy
+        if: (github.event_name == 'repository_dispatch') || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+        run: make deploy-linux
+      - name: Clean up
+        run: make clean-linux
   build-deploy-windows:
     strategy:
       matrix:
