Allow sample buildpacks on all stacks
Expand the stacks that we support for sample buildpacks

Signed-off-by: Aidan Delaney <adelaney21@bloomberg.net>

--- a/buildpacks/java-maven/buildpack.toml
+++ b/buildpacks/java-maven/buildpack.toml
@@ -17,5 +17,8 @@ id = "io.buildpacks.samples.stacks.bionic"
 id = "io.buildpacks.samples.stacks.alpine"
 
 [[stacks]]
+id = "*"
+
+[[stacks]]
 id = "io.buildpacks.stacks.bionic"
 mixins = ["build:set=shell-utils"]
