--- a/buildpacks/kotlin-gradle/buildpack.toml
+++ b/buildpacks/kotlin-gradle/buildpack.toml
@@ -16,5 +16,8 @@ id = "io.buildpacks.samples.stacks.bionic"
 id = "io.buildpacks.samples.stacks.alpine"
 
 [[stacks]]
+id = "*"
+
+[[stacks]]
 id = "io.buildpacks.stacks.bionic"
 mixins = ["build:set=shell-utils"]
